Crash when entering edit mode with skin modifier enabled. #59990

Closed
opened 2018-12-30 18:15:01 +01:00 by user1 · 7 comments

System Information
Operating system: Linux Mint 19
Graphics card: GT 630

Blender Version
Broken:
2.80 (sub 39), branch: blender2.7, commit date: 2018-12-25 16:36, hash: 60b930af3e
system-info.txt
Short description of error
Just open the file and try to go in edit mode. On my system it continuosly crashes.
Djunke.blend
If you disable the skin modifier, it doesn't crash. Maybe Crash report #59894 is also related to the skin modifier, since the complain was about an armature which was generated by that modifier. That's why i tag this report with "modifier".

**System Information** Operating system: Linux Mint 19 Graphics card: GT 630 **Blender Version** Broken: 2.80 (sub 39), branch: blender2.7, commit date: 2018-12-25 16:36, hash: 60b930af3e73 [system-info.txt](https://archive.blender.org/developer/F6118888/system-info.txt) **Short description of error** Just open the file and try to go in edit mode. On my system it continuosly crashes. [Djunke.blend](https://archive.blender.org/developer/F6118817/Djunke.blend) If you disable the skin modifier, it doesn't crash. Maybe Crash report #59894 is also related to the skin modifier, since the complain was about an armature which was generated by that modifier. That's why i tag this report with "modifier".
Author

Added subscriber: @user1

Added subscriber: @user1

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2018-12-31 15:43:23 +01:00

I can reproduce this on 2.8. It doesn't crash in solid mode tough...
But it seems to be modifier related as it doesn't crash if I disable the edit mode cage also.

Backtrace:

Thread 1 "blender" received signal SIGABRT, Aborted.
0x00007ffff51a402b in raise () from /lib64/libc.so.6
(gdb) bt
- 0  0x00007ffff51a402b in raise () from /lib64/libc.so.6
- 1  0x00007ffff518d535 in abort () from /lib64/libc.so.6
- 2  0x00007ffff518d40f in __assert_fail_base.cold.0 () from /lib64/libc.so.6
- 3  0x00007ffff519b9ea in __assert_fail () from /lib64/libc.so.6
#4  0x0000555557c12fd9 in copy_attrib_name (format=0x7fffffffc6a0,
    name=0x7fffd2aafb28 "\a`'?\a`'?\a`'?\a`'?\377\037\063?\377\037\063?\377\037\063?\377\037\063?\374\337=?\374\337=?\374\337=?\374\337=?\373?G?\373?G?\373?G?\373?G?\375\237O?\375\237O?\375\237O?\375\237O?\375\277V?\375\277V?\375\277V?\375\277V?\001\340\\?\001\340\\?\001\340\\?\001\340\\?\006\200b?\006\200b?\006\200b?\006\200b?\001\300u?\001\300u?\001\300u?\001\300u?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\370\337v?\370\337v?"..., suffix=0x0) at /home/zed/programmering/blender_master/blender/source/blender/gpu/intern/gpu_vertex_format.c:161
#5  0x0000555557c1337b in GPU_vertformat_alias_add (format=0x7fffffffc6a0,
    alias=0x7fffd2aafb28 "\a`'?\a`'?\a`'?\a`'?\377\037\063?\377\037\063?\377\037\063?\377\037\063?\374\337=?\374\337=?\374\337=?\374\337=?\373?G?\373?G?\373?G?\373?G?\375\237O?\375\237O?\375\237O?\375\237O?\375\277V?\375\277V?\375\277V?\375\277V?\001\340\\?\001\340\\?\001\340\\?\001\340\\?\006\200b?\006\200b?\006\200b?\006\200b?\001\300u?\001\300u?\001\300u?\001\300u?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\370\337v?\370\337v?"...) at /home/zed/programmering/blender_master/blender/source/blender/gpu/intern/gpu_vertex_format.c:221
#6  0x0000555557c31d2d in mesh_create_loop_uv_and_tan (rdata=0x7fffcbfec008, vbo=0x7fffd57ee408)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:3414
#7  0x0000555557c45d3e in DRW_mesh_batch_cache_create_requested (ob=0x7fffe9ea5608, me=0x7fffffffcba0)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:5487
#8  0x0000555557cbb3fc in drw_batch_cache_generate_requested (ob=0x7fffe9ea5608)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache.c:3743
#9  0x0000555557c49a72 in drw_engines_cache_populate (ob=0x7fffe9ea5608)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1023
#10 0x0000555557c4acb4 in DRW_draw_render_loop_ex (depsgraph=0x7fffeba9ed08, engine_type=0x55555d042b60 <DRW_engine_viewport_eevee_type>, ar=0x7fffd5af4788,
    v3d=0x7fffd57f1108, viewport=0x7fffd555fde8, evil_C=0x7ffff0c30288)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1483
- 11 0x0000555557c4a8c0 in DRW_draw_view (C=0x7ffff0c30288) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1409
- 12 0x0000555557163eca in view3d_draw_view (C=0x7ffff0c30288, ar=0x7fffd5af4788)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1333
#13 0x0000555557163f7a in view3d_main_region_draw (C=0x7ffff0c30288, ar=0x7fffd5af4788)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1354
#14 0x000055555761eb3c in ED_region_do_draw (C=0x7ffff0c30288, ar=0x7fffd5af4788)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:567
#15 0x000055555701ca70 in wm_draw_window_offscreen (C=0x7ffff0c30288, win=0x7fffd3789108, stereo=false)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:580
#16 0x000055555701cfee in wm_draw_window (C=0x7ffff0c30288, win=0x7fffd3789108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:712
#17 0x000055555701d4f5 in wm_draw_update (C=0x7ffff0c30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:866
- 18 0x000055555701a1b1 in WM_main (C=0x7ffff0c30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:433
- 19 0x0000555557014afe in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521
I can reproduce this on 2.8. It doesn't crash in solid mode tough... But it seems to be modifier related as it doesn't crash if I disable the edit mode cage also. Backtrace: ``` Thread 1 "blender" received signal SIGABRT, Aborted. 0x00007ffff51a402b in raise () from /lib64/libc.so.6 (gdb) bt - 0 0x00007ffff51a402b in raise () from /lib64/libc.so.6 - 1 0x00007ffff518d535 in abort () from /lib64/libc.so.6 - 2 0x00007ffff518d40f in __assert_fail_base.cold.0 () from /lib64/libc.so.6 - 3 0x00007ffff519b9ea in __assert_fail () from /lib64/libc.so.6 #4 0x0000555557c12fd9 in copy_attrib_name (format=0x7fffffffc6a0, name=0x7fffd2aafb28 "\a`'?\a`'?\a`'?\a`'?\377\037\063?\377\037\063?\377\037\063?\377\037\063?\374\337=?\374\337=?\374\337=?\374\337=?\373?G?\373?G?\373?G?\373?G?\375\237O?\375\237O?\375\237O?\375\237O?\375\277V?\375\277V?\375\277V?\375\277V?\001\340\\?\001\340\\?\001\340\\?\001\340\\?\006\200b?\006\200b?\006\200b?\006\200b?\001\300u?\001\300u?\001\300u?\001\300u?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\370\337v?\370\337v?"..., suffix=0x0) at /home/zed/programmering/blender_master/blender/source/blender/gpu/intern/gpu_vertex_format.c:161 #5 0x0000555557c1337b in GPU_vertformat_alias_add (format=0x7fffffffc6a0, alias=0x7fffd2aafb28 "\a`'?\a`'?\a`'?\a`'?\377\037\063?\377\037\063?\377\037\063?\377\037\063?\374\337=?\374\337=?\374\337=?\374\337=?\373?G?\373?G?\373?G?\373?G?\375\237O?\375\237O?\375\237O?\375\237O?\375\277V?\375\277V?\375\277V?\375\277V?\001\340\\?\001\340\\?\001\340\\?\001\340\\?\006\200b?\006\200b?\006\200b?\006\200b?\001\300u?\001\300u?\001\300u?\001\300u?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\002\240v?\370\337v?\370\337v?"...) at /home/zed/programmering/blender_master/blender/source/blender/gpu/intern/gpu_vertex_format.c:221 #6 0x0000555557c31d2d in mesh_create_loop_uv_and_tan (rdata=0x7fffcbfec008, vbo=0x7fffd57ee408) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:3414 #7 0x0000555557c45d3e in DRW_mesh_batch_cache_create_requested (ob=0x7fffe9ea5608, me=0x7fffffffcba0) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:5487 #8 0x0000555557cbb3fc in drw_batch_cache_generate_requested (ob=0x7fffe9ea5608) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache.c:3743 #9 0x0000555557c49a72 in drw_engines_cache_populate (ob=0x7fffe9ea5608) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1023 #10 0x0000555557c4acb4 in DRW_draw_render_loop_ex (depsgraph=0x7fffeba9ed08, engine_type=0x55555d042b60 <DRW_engine_viewport_eevee_type>, ar=0x7fffd5af4788, v3d=0x7fffd57f1108, viewport=0x7fffd555fde8, evil_C=0x7ffff0c30288) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1483 - 11 0x0000555557c4a8c0 in DRW_draw_view (C=0x7ffff0c30288) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1409 - 12 0x0000555557163eca in view3d_draw_view (C=0x7ffff0c30288, ar=0x7fffd5af4788) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1333 #13 0x0000555557163f7a in view3d_main_region_draw (C=0x7ffff0c30288, ar=0x7fffd5af4788) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1354 #14 0x000055555761eb3c in ED_region_do_draw (C=0x7ffff0c30288, ar=0x7fffd5af4788) at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:567 #15 0x000055555701ca70 in wm_draw_window_offscreen (C=0x7ffff0c30288, win=0x7fffd3789108, stereo=false) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:580 #16 0x000055555701cfee in wm_draw_window (C=0x7ffff0c30288, win=0x7fffd3789108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:712 #17 0x000055555701d4f5 in wm_draw_update (C=0x7ffff0c30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:866 - 18 0x000055555701a1b1 in WM_main (C=0x7ffff0c30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:433 - 19 0x0000555557014afe in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521 ```

Added subscriber: @capnm

Added subscriber: @capnm

The mesh cache is here unhappy with a texture and non-existent UV geometry.
A simpler file:
#59990-crash-skin-wo-UV-Map.blend
backtrace
#59990-crash.txt

The mesh cache is here unhappy with a texture and non-existent UV geometry. A simpler file: [#59990-crash-skin-wo-UV-Map.blend](https://archive.blender.org/developer/F6130812/T59990-crash-skin-wo-UV-Map.blend) backtrace [#59990-crash.txt](https://archive.blender.org/developer/F6130816/T59990-crash.txt)

This issue was referenced by 3a9909f38e

This issue was referenced by 3a9909f38e702059085973ae2cb30aa1750bbfd4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59990
No description provided.