Fix T59990: Crash when entering edit mode with skin modifier enabled

The skin modifier does not keep the UV layers.

This just add a safety check when there is no UV layers.